added portfolio/updated the link

--- a/views/index.html
+++ b/views/index.html
@@ -196,7 +196,7 @@
                   <br>
                   <ul>
                     <li>Built a multi-platform task management tool, <a class="emphasis_intro in-para-link" href="https://www.google.com">Task-It</a>, for users to organize, prioritize, and schedule by related tasks, dates, and/or projects.</li><br>
-                    <li>Built a simple website, <a class="emphasis_intro in-para-link" href="#">ELSIEMADE</a>, to display some of my photo-editing skills on my favorite travel moments.</li>
+                    <li>Built a masonry-ordered photo grib web page, <a class="emphasis_intro in-para-link" href="https://elsie-c.github.io/brickade">brickade</a>, to display some of my photo-editing skills on my favorite moments.</li>
                     <br>
                     <li>Designed the frontend for data repository, <a class="emphasis_intro in-para-link" href="#">RadQA Solutions Data Repository</a>, for storing MRI database and troubleshooting the performance of local MRI scanners.</li><br>
                     <!-- <li><a class="emphasis_intro in-para-link" href="#">MEDICALY</a></li> -->
@@ -324,15 +324,33 @@
               <div class="flip-box">
                 <div class="flip-box-front text-center" style="background-color:black;">
                   <div class="inner color-white">
-                    <h3 class="flip-box-header">ELSIEMADE</h3>
-                    <p>My photography collection website of the favorite moments in my life.
+                    <h3 class="flip-box-header">brickade</h3>
+                    <p>Using react masonary photo grid for my favorite moments from trips.
                     </p>
                   </div>
                 </div>
                 <div class="flip-box-back text-center" style="background-color:black;">
                   <div class="inner color-white">
-                    <div class="listoftools">[ HTML, CSS ]</div>
-                    <button class="flip-box-button">Learn More</button>
+                    <div class="listoftools">[ HTML, CSS, JS, React, NodeJS, Github Page ]</div>
+                    <button class="flip-box-button"><a href="https://elsie-c.github.io/brickade">Learn More</a></button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="box-item">
+              <div class="flip-box">
+                <div class="flip-box-front text-center" style="background-color:black;">
+                  <div class="inner color-white">
+                    <h3 class="flip-box-header">portfolio</h3>
+                    <p>Minialistic website for displaying portfolio.</p>
+                  </div>
+                </div>
+                <div class="flip-box-back text-center" style="background-color:black;">
+                  <div class="inner color-white">
+                    <p class="back-para">
+                    </p><br>
+                    <div class="listoftools">[ HTML, CSS, Javascript, React, NodeJS, Heroku ]</div>
+                    <button class="flip-box-button"><a href="https://www.elsiemade.com">Learn More</a></button>
                   </div>
                 </div>
               </div>
