--- a/views/index.html
+++ b/views/index.html
@@ -156,7 +156,30 @@
               <br />
               Shortly after finishing my graduate program, I dabbled in programming
               as a hobby to build a fun game. Then, the hobby led me into the field of <a class=emphasis_intro>web development</a> where I found myself enjoying building fun tools for the web.
+              <br/>
+              <br/>
+              Here's some technologies I've been working with recently:
             </p>
+            <br/>
+
+            <ul class="skillname">
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Javascript</li>
+              <li>React/Redux</li>
+              <li>MongoDB/Mongoose</li>
+              <li>NodeJS</li>
+            </ul>
+            <ul class="skillname">
+              <li>Lightroom</li>
+              <li>Photoshop</li>
+              <li>Adobe XD</li>
+              <li>Premiere Rush</li>
+              <li>Express</li>
+            </ul>
+            <ul class="skillname">
+              <li>Boostrap</li>
+            </ul>
           </div>
         </div>
       </section>
