--- a/public/main.css
+++ b/public/main.css
@@ -27,6 +27,15 @@ header {
     font-family: 'IBM Plex Mono', monospace;
 }
 
+.skillname {
+    display: flex;
+    flex-direction: row;
+    font-size: 12px;
+    font-family: 'IBM Plex Mono', monospace;
+    color:#db963b;
+}
+
+
 .logo {
     cursor: pointer;
     margin-right: auto;
