changed title uppercase

--- a/views/index.html
+++ b/views/index.html
@@ -347,7 +347,7 @@
               <div class="flip-box">
                 <div class="flip-box-front text-center" style="background-color:black;">
                   <div class="inner color-white">
-                    <h3 class="flip-box-header">brickade</h3>
+                    <h3 class="flip-box-header">Brickade</h3>
                     <p>Using react masonary photo grid for my favorite moments from trips.
                     </p>
                   </div>
@@ -364,7 +364,7 @@
               <div class="flip-box">
                 <div class="flip-box-front text-center" style="background-color:black;">
                   <div class="inner color-white">
-                    <h3 class="flip-box-header">portfolio</h3>
+                    <h3 class="flip-box-header">Portfolio</h3>
                     <p>Minialistic website for displaying portfolio.</p>
                   </div>
                 </div>
