--- a/views/index.html
+++ b/views/index.html
@@ -179,6 +179,8 @@
             </ul>
             <ul class="skillname">
               <li>Boostrap</li>
+              <li>Material UI</li>
+              <li>Appbase.io</li>
             </ul>
           </div>
         </div>
@@ -218,7 +220,8 @@
                   <h3>Oct 2018 - Present</h3>
                   <br>
                   <ul>
-                    <li>Built a multi-platform task management tool, <a class="emphasis_intro in-para-link" href="https://www.google.com">Task-It</a>, for users to organize, prioritize, and schedule by related tasks, dates, and/or projects.</li><br>
+                    <li>Built a multi-platform task management tool, <a class="emphasis_intro in-para-link" href="https://www.google.com">Task-It v1.2</a>, for users to organize, prioritize, and schedule by related tasks, dates, and/or projects.</li><br>
+                    <li>Building a proof-of-concept web app, <a class="emphasis_intro in-para-link" href="https://github.com/elsie-c/medicaly-v1.0">Medicaly v1.0</a> using appbase.io/Materials UI. </li><br>
                     <li>Built a masonry-ordered photo grib web page, <a class="emphasis_intro in-para-link" href="https://elsie-c.github.io/brickade">brickade</a>, to display some of my photo-editing skills on my favorite moments.</li>
                     <br>
                     <li>Designed the frontend for data repository, <a class="emphasis_intro in-para-link" href="#">RadQA Solutions Data Repository</a>, for storing MRI database and troubleshooting the performance of local MRI scanners.</li><br>
@@ -329,7 +332,7 @@
               <div class="flip-box">
                 <div class="flip-box-front text-center" style="background-color:black;">
                   <div class="inner color-white">
-                    <h3 class="flip-box-header">Medicaly</h3>
+                    <h3 class="flip-box-header">Medicaly v1.0</h3>
                     <p>Under Construction</p>
                   </div>
                 </div>
@@ -338,7 +341,7 @@
                     <p class="back-para">Under Construction
                     </p><br>
                     <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
-                    <button class="flip-box-button">Learn More</button>
+                    <button class="flip-box-button"><a href="https://github.com/elsie-c/medicaly-v1.0">Learn Mor</a>e</button>
                   </div>
                 </div>
               </div>
