--- a/views/index.html
+++ b/views/index.html
@@ -340,8 +340,8 @@
                   <div class="inner color-white">
                     <p class="back-para">Under Construction
                     </p><br>
-                    <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
-                    <button class="flip-box-button"><a href="https://github.com/elsie-c/medicaly-v1.0">Learn Mor</a>e</button>
+                    <div class="listoftools">[ HTML, CSS, Javascript, React, Appbase.io, Material UI ]</div>
+                    <button class="flip-box-button"><a href="https://github.com/elsie-c/medicaly-v1.0">Learn More</a></button>
                   </div>
                 </div>
               </div>
