--- a/views/index.html
+++ b/views/index.html
@@ -48,7 +48,7 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
-    <a><button class="resume-button">Resume</button></a>
+    <button class="resume-button"><a href="./eunbyul-cho-resume.pdf" download="newfilename">Resume</a></button>
   </header>
 
   <!--maincontent-->
@@ -148,7 +148,7 @@
           <div class="about-details" data-aos="fade-down" data-aos-delay="600">
             <br />
             <p class="paragraph-section about">
-              I'm a <a class=emphasis_intro>full-stack web developer</a>. I like creating products that are truly unique and reflect their value and aesthetics. I develop websites/applications that provide both intuitive UI and efficient and adaptable backends.
+              I'm a <a class=emphasis_intro>front-end software engineer</a>. I like creating products that are truly unique and reflect their value and aesthetics. I develop websites/applications that provide both intuitive UI and efficient and adaptable backends.
               <br />
               <br />
               I have a bachelor's degree in <a class="emphasis_intro">Biochemistry and Cell Biology</a> at University of California, San Diego. I finished my master's in <a class=emphasis_intro>Biomedical Engineering</a> at University of California, Irvine and specialized in <a class=emphasis_intro>Carbon MEMS/NEMS and nanofibers for biosensors and electrochemical devices</a>.
@@ -173,14 +173,16 @@
             <ul class="skillname">
               <li>Lightroom</li>
               <li>Photoshop</li>
-              <li>Adobe XD</li>
+              <li>Heroku</li>
               <li>Premiere Rush</li>
-              <li>Express</li>
+              <li>MERN</li>
             </ul>
             <ul class="skillname">
               <li>Boostrap</li>
               <li>Material UI</li>
               <li>Appbase.io</li>
+              <li>GitHub Page, Git</li>
+              <li>Firebase</li>
             </ul>
           </div>
         </div>
@@ -195,7 +197,7 @@
             <div class="container" data-aos="fade-down" data-aos-delay="300">
               <div class="tab">
                 <button class="tablinks" onclick="openCity(event, 'cj')" id="defaultOpen">
-                  Full-Stack
+                  Front-End
                 </button>
                 <button class="tablinks" onclick="openCity(event, 'biomems')">
                   BioMEMS/Carbon-MEMS
@@ -216,15 +218,15 @@
               <div>
                 <div id="cj" class="tabcontent">
                   <h1>Personal Projects</h1>
-                  <h2>Full-Stack Web Developer</h2>
+                  <h2>Front-End Software Engineer</h2>
                   <h3>Oct 2018 - Present</h3>
                   <br>
                   <ul>
-                    <li>Built a multi-platform task management tool, <a class="emphasis_intro in-para-link" href="https://www.google.com">Task-It v1.2</a>, for users to organize, prioritize, and schedule by related tasks, dates, and/or projects.</li><br>
-                    <li>Building a proof-of-concept web app, <a class="emphasis_intro in-para-link" href="https://github.com/elsie-c/medicaly-v1.0">Medicaly v1.0</a> using appbase.io/Materials UI. </li><br>
-                    <li>Built a masonry-ordered photo grib web page, <a class="emphasis_intro in-para-link" href="https://elsie-c.github.io/brickade">brickade</a>, to display some of my photo-editing skills on my favorite moments.</li>
+                    <li>A task management tool, <a class="emphasis_intro in-para-link" href="https://github.com/elsie-c/tasklit">TaskLit</a>, for users to organize, prioritize, and schedule by related tasks, dates, and/or projects.</li><br>
+                    <li><a class="emphasis_intro in-para-link" href="www.elsiemade.com">elsiemade.com</a>- A personal website to serve as an interactive resume and showcase a number of stylistic concepts</li><br>
+                    <li>Built a masonry-ordered photo grid web page, <a class="emphasis_intro in-para-link" href="https://elsie-c.github.io/brickade">brickade</a>, to display photo of my favorite moments.</li>
                     <br>
-                    <li>Designed the frontend for data repository, <a class="emphasis_intro in-para-link" href="#">RadQA Solutions Data Repository</a>, for storing MRI database and troubleshooting the performance of local MRI scanners.</li><br>
+                    <li>Collaboration Work: Frontend for data repository, <a class="emphasis_intro in-para-link" href="#">RadQA Solutions Data Repository</a>, for storing MRI database and troubleshooting the performance of local MRI scanners.</li><br>
                     <!-- <li><a class="emphasis_intro in-para-link" href="#">MEDICALY</a></li> -->
                   </ul>
                 </div>
@@ -234,10 +236,10 @@
                   <h3>Jun 2017 - Oct 2018</h3>
                   <br>
                   <ul>
-                    <li><a class="emphasis_intro">[Thesis]</a>: Improving a prototype of enzymatic fuel cell using laccase-based biocathode on novel/ graphitizing-carbon materials.</li><br>
+                    <li><a class="emphasis_intro">[Thesis]</a>: Improving a prototype of enzymatic fuel cell using laccase-based biocathode on novel graphitizing-carbon materials.</li><br>
                     <li>Developed a method to functionalize electrospun carbon nanofibers to study the electrochemical behavior for biosensors and biofuel cells applications.</li><br>
                     <li><a class="emphasis_intro">[Project-B]</a>: Developing an iodide ion nanosensor for monitoring thyroid deficiency disorder.</li><br>
-                    <li><a class="emphasis_intro">[Project-C]</a>: Building a SMART water filteration system using graphitic carbon membranes to filter and sense contaminants in drinking and wastewater.</li>
+                    <li><a class="emphasis_intro">[Project-C]</a>: Building a SMART water filter using graphitic carbon membranes for detecting contaminants in drinking and wastewater.</li>
                   </ul>
                 </div>
                 <div id="thermo" class="tabcontent">
@@ -266,7 +268,6 @@
                   <h3>Jul 2014 - Jul 2015</h3>
                   <br>
                   <ul>
-                    <li>Practiced daily scrum, agile project management, good data and documentation practices for FDA 510(k) submission.</li><br>
                     <li>Developed a high-throughput in-vitro diagnostic medical instruments for allergy IgE-based testing in a reuglated lab enviroment per cGMP, ISO 9001, ISO 13485, and CFR 920.</li><br>
                     <li>Troubleshot both instrumental and manual immunosensors and reported in weekly team and interdepartmental meetings.</li><br>
                     <li>Optimized IVD stability testing design, sIgE/tIgE immunoassays, and DoE for allergenic proteins and components.</li>
@@ -300,14 +301,14 @@
               <div class="flip-box">
                 <div class="flip-box-front text-center" style="background-color:black;">
                   <div class="inner color-white">
-                    <h3 class="flip-box-header">Task-IT</h3>
-                    <p>Built a multi-platform task management tool.</p>
+                    <h3 class="flip-box-header">Taskit</h3>
+                    <p>Built a simple task management tool.</p>
                   </div>
                 </div>
                 <div class="flip-box-back text-center" style="background-color:black;">
                   <div class="inner color-white">
-                    <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
-                    <button class="flip-box-button">Learn More</button>
+                    <div class="listoftools">[ Javascript, HTML, CSS, React, NodeJS, Material-UI, Github Page ]</div>
+                    <button class="flip-box-button"><a href="https://github.com/elsie-c/tasklit">Learn More</a></button>
                   </div>
                 </div>
               </div>
@@ -322,7 +323,7 @@
                 </div>
                 <div class="flip-box-back text-center" style="background-color:black;">
                   <div class="inner color-white">
-                    <div class="listoftools">[ HTML, CSS, Javascript, React, MongoDB, NodeJS, Express ]</div>
+                    <div class="listoftools">[ Javascript, HTML, CSS, MERN ]</div>
                     <button class="flip-box-button">Learn More</button>
                   </div>
                 </div>
@@ -332,7 +333,7 @@
               <div class="flip-box">
                 <div class="flip-box-front text-center" style="background-color:black;">
                   <div class="inner color-white">
-                    <h3 class="flip-box-header">Medicaly v1.0</h3>
+                    <h3 class="flip-box-header">Medicaly</h3>
                     <p>Under Construction</p>
                   </div>
                 </div>
@@ -340,7 +341,7 @@
                   <div class="inner color-white">
                     <p class="back-para">Under Construction
                     </p><br>
-                    <div class="listoftools">[ HTML, CSS, Javascript, React, Appbase.io, Material UI ]</div>
+                    <div class="listoftools">[ Javascript, HTML, CSS, React, Appbase.io, Material UI ]</div>
                     <button class="flip-box-button"><a href="https://github.com/elsie-c/medicaly-v1.0">Learn More</a></button>
                   </div>
                 </div>
@@ -357,7 +358,7 @@
                 </div>
                 <div class="flip-box-back text-center" style="background-color:black;">
                   <div class="inner color-white">
-                    <div class="listoftools">[ HTML, CSS, JS, React, NodeJS, Github Page ]</div>
+                    <div class="listoftools">[ Javascript, HTML, CSS, React, NodeJS, Github Page ]</div>
                     <button class="flip-box-button"><a href="https://elsie-c.github.io/brickade">Learn More</a></button>
                   </div>
                 </div>
@@ -375,7 +376,7 @@
                   <div class="inner color-white">
                     <p class="back-para">
                     </p><br>
-                    <div class="listoftools">[ HTML, CSS, Javascript, React, NodeJS, Heroku ]</div>
+                    <div class="listoftools">[ Javascript, HTML, CSS, React, NodeJS, Heroku ]</div>
                     <button class="flip-box-button"><a href="https://www.elsiemade.com">Learn More</a></button>
                   </div>
                 </div>
