--- a/views/index.html
+++ b/views/index.html
@@ -148,7 +148,7 @@
           <div class="about-details" data-aos="fade-down" data-aos-delay="600">
             <br />
             <p class="paragraph-section about">
-              I'm a <a class=emphasis_intro>front-end software engineer</a>. I like creating products that are truly unique and reflect their value and aesthetics. I develop websites/applications that provide both intuitive UI and efficient and adaptable backends.
+              I like creating products that are truly unique and reflect their value and aesthetics. I develop websites/applications that provide both intuitive UI and efficient and adaptable backends.
               <br />
               <br />
               I have a bachelor's degree in <a class="emphasis_intro">Biochemistry and Cell Biology</a> at University of California, San Diego. I finished my master's in <a class=emphasis_intro>Biomedical Engineering</a> at University of California, Irvine and specialized in <a class=emphasis_intro>Carbon MEMS/NEMS and nanofibers for biosensors and electrochemical devices</a>.
