--- a/views/index.html
+++ b/views/index.html
@@ -3,42 +3,17 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport"  content="width=device-width, user-scalable=no" />
   <title>Elsie Cho</title>
-  <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
-  <link rel="stylesheet" href="main.css" />
+  <link rel="stylesheet" href="main-mb.css" />
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 </head>
 
 <body>
   <!--header-->
   <header>
-    <!-- <div class="menu-toggler">
-      <div class="bar half start"></div>
-      <div class="bar"></div>
-      <div class="bar half end"></div>
-    </div> -->
-    <!-- <nav class="top-nav">
-      <ul class="nav-list">
-        <li>
-          <a href="index.html" class="nav-link">Home</a>
-        </li>
-        <li>
-          <a href="#about" class="nav-link">About</a>
-        </li>
-        <li>
-          <a href="#portfolio" class="nav-link">Portfolio</a>
-        </li>
-        <li>
-          <a href="#experience" class="nav-link">Experience</a>
-        </li>
-        <li>
-          <a href="#contact" class="nav-link">Contact</a>
-        </li>
-      </ul>
-    </nav> -->
     <img class="logo" src="/images/elsielogo.PNG" alt="logo">
     <nav>
       <ul class="nav__links">
@@ -478,115 +453,6 @@
         </div>
       </div>
     </section>
-    <!-- <section class="photo" id="photo">
-        <div class="container">
-          <div class="section-heading">
-            <h1>Photography</h1>
-            <h6>Taken and Edited by Elsie</h6>
-          </div>
-        <div class="slidershow middle">
-          <div class="slides">
-            <input type="radio" name="r" id="r1" checked>
-            <input type="radio" name="r" id="r2">
-            <input type="radio" name="r" id="r3">
-            <input type="radio" name="r" id="r4">
-            <input type="radio" name="r" id="r5">
-            <div class="slide s1">
-              <img src="./images/13.jpg" alt="">
-            </div>
-            <div class="slide">
-              <img src="./images/4.jpg" alt="">
-            </div>
-            <div class="slide">
-              <img src="./images/12.jpg" alt="">
-            </div>
-            <div class="slide">
-              <img src="./images/11.jpg" alt="">
-            </div>
-            <div class="slide">
-              <img src="./images/dsc15.jpg" alt="">
-            </div>
-          </div>
-    
-          <div class="navigation">
-            <label for="r1" class="bar"></label>
-            <label for="r2" class="bar"></label>
-            <label for="r3" class="bar"></label>
-            <label for="r4" class="bar"></label>
-            <label for="r5" class="bar"></label>
-          </div>
-        </div>
-      </div>
-      </section> -->
-    <!-- <section class="publications" id="publications">
-      <div class="container">
-        <div class="section-heading">
-          <h1>Publications & Patents</h1>
-          <h6>View my recent publications / patents</h6>
-        </div>
-        <div class="portfolio-item">
-          <div class="portfolio-img has-margin-right">
-            <img src="images/portitem1.jpeg" alt="" data-aos="fade-left" data-aos-delay="300" />
-          </div>
-          <div class="portfolio-description" data-aos="fade-right" data-aos-delay="600">
-            <h6>Web Development</h6>
-            <h1>Blog Website</h1>
-            <p>
-              Lorem Ipsum is simply dummy text of the printing and
-              typesetting industryorem Ipsum is simply dummy text of the
-              printing and typesetting industry
-            </p>
-            <a href="#" class="cta">View Details</a>
-          </div>
-        </div>
-        <div class="portfolio-item">
-          <div class="portfolio-description has-margin-right" data-aos="fade-left" data-aos-delay="900">
-            <h6>Web Design</h6>
-            <h1>Product Layout</h1>
-            <p>
-              Lorem Ipsum is simply dummy text of the printing and
-              typesetting industryorem Ipsum is simply dummy text of the
-              printing and typesetting industry
-            </p>
-            <a href="#" class="cta">View Details</a>
-          </div>
-          <div class="portfolio-img">
-            <img src="images/portitem2.jpeg" alt="" data-aos="fade-right" data-aos-delay="1200" />
-          </div>
-        </div>
-        <div class="portfolio-item">
-          <div class="portfolio-img has-margin-right">
-            <img src="images/portitem3.jpeg" alt="" data-aos="fade-left" data-aos-delay="1500" />
-          </div>
-          <div class="portfolio-description" data-aos="fade-right" data-aos-delay="1800">
-            <h6>Web Design</h6>
-            <h1>Product Sketch</h1>
-            <p>
-              Lorem Ipsum is simply dummy text of the printing and
-              typesetting industryorem Ipsum is simply dummy text of the
-              printing and typesetting industry
-            </p>
-            <a href="#" class="cta">View Details</a>
-          </div>
-        </div>
-        <div class="portfolio-item">
-          <div class="portfolio-description has-margin-right" data-aos="fade-left" data-aos-delay="900">
-            <h6>Web Design</h6>
-            <h1>Product Layout</h1>
-            <p>
-              Lorem Ipsum is simply dummy text of the printing and
-              typesetting industryorem Ipsum is simply dummy text of the
-              printing and typesetting industry
-            </p>
-            <a href="#" class="cta">View Details</a>
-          </div>
-          <div class="portfolio-img">
-            <img src="images/portitem2.jpeg" alt="" data-aos="fade-right" data-aos-delay="1200" />
-          </div>
-        </div>
-      </div>
-      
-    </section> -->
     </div>
   </div>
 
