updating mobile friendly

--- a/views/index.html
+++ b/views/index.html
@@ -31,8 +31,8 @@
     <!--front page-->
     <section class="block title-heading">
       <h1>Elsie Cho</h1>
-      <div class=" dimension">
-        <span class="text font"> "Live above your expectation and beyond your imagination"</span>
+      <div class="quotation">
+        <span class="textQuote"> "Live above your expectation and <br>beyond your imagination"</span>
       </div>
       <div id="wrapper">
         <div class="viewport">
@@ -68,13 +68,13 @@
           </div>
         </div>
       </div>
-      <span class="text font move-me">The Cube: "Spin me around for fun!"</span>
+      <span class="textQuote move-me">The Cube: "Spin me around for fun!"</span>
     </section>
 
     <!--sidebar left link social container-->
     <div>
-      <div class="social-media main-left">
-        <ul class="nav-list left-sticky">
+      <div class="social-media">
+        <ul class="left-sticky">
           <li>
             <a href="https://scholar.google.com/citations?hl=en&user=w1WUX4MAAAAJ&sortby=pubdate&view_op=list_works&authuser=1&gmla=AJsN-F5rtis6A5-bqx1JHHbCjIAJZ8m-LIO9zHQcI0qt_raoOrGzVjXKFt8c5Fe-AfG_dI1Ca1lTmOvvumZo4cHN6hZ8GML3YX9FHjXKHKrzeUH1mvsVEKw" class="icon-link">
               <i class="fas fa-graduation-cap"></i>
@@ -100,7 +100,6 @@
               <i class="fab fa-codepen"></i>
             </a>
           </li>
-          
         </ul>
         <div class="vl-left"></div>
       </div>
