--- a/public/main-mb.css
+++ b/public/main-mb.css
@@ -12,13 +12,17 @@
     padding: 0;
 }
 
+.section{
+    max-width: 375px;
+}
+
 /*header/navbar setting*/
 header {
     width: 100%;
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    height: 120px;
+    height: 121px;
     padding: 0px 2.5%;
     position: fixed;
     background-color: black;
@@ -38,7 +42,6 @@ header {
 .nav__links{
     display: inline-block;
 }
-
 
 .nav__links li {
     display: flex;
@@ -78,43 +81,16 @@ header {
     color: #db963b;
     transition: all 500ms ease 100ms;
 }
+/*end of header*/
 
-.skillname {
-    display: flex;
-    flex-direction: row;
-    font-size: 12px;
-    font-family: 'IBM Plex Mono', monospace;
-    color:#db963b;
-}
-
-
-
-.profileimage {
-    border-radius: 10px;
-}
-
-.emphasis_intro{
-    color:  #db963b;
-}
-
-.in-para-link {
-    cursor: pointer;
-}
-
-.in-para-link:hover{
-    color: #dbb582;
-    transition: 0.5s;
-}
-
-/*end header/navbar setting*/
-/*main content*/
+/*cube & main CONTENT*/
 
 #wrapper {
     padding-top: 5%;
 }
 
 .main-content {
-    margin-top: 150px;
+    margin-top: 100px;
 }
 
 .viewport {
@@ -195,22 +171,6 @@ header {
     animation: spinning 2s infinite;
 }
 
-.paragraph-section {
-    font-family: 'IBM Plex Mono', monospace;
-    line-height: 20px;
-    text-align: justify;
-    text-justify: inter-word;
-}
-
-.about {
-    font-size: 13px;
-}
-
-.move-me {
-    margin: 100px;
-    position: relative;
-}
-
 .cube>div>div.cube-image.active {
     color: rgb(0, 0, 0);
 }
@@ -285,13 +245,6 @@ object:hover {
     opacity: 1;
 }
 
-@media (max-width: 420px){
-    section {
-        max-width: 400px;
-    }
-}
-
-
 @media (max-width: 640px) {
     .viewport {
         -webkit-transform: scale(0.6, 0.6);
@@ -304,41 +257,6 @@ object:hover {
 
 }
 
-.block {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: space-evenly;
-    -ms-flex-pack: space-evenly;
-    justify-content: space-evenly;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-}
-
-.text {
-    color: #db963b;
-    font-size: 12px;
-    font-weight: 300;
-}
-
-.font {
-    font-family: 'IBM Plex Mono', monospace;
-}
-
-.dimension {
-    -webkit-perspective: 500px;
-    perspective: 500px;
-    -webkit-perspective-origin: center center;
-    perspective-origin: center center;
-    display: flex;
-    align-items: center;
-    ;
-}
 
 .side {
     position: absolute;
@@ -462,6 +380,252 @@ object:hover {
 
 /*# sourceMappingURL=spinner.css.map */
 
+
+/*title-heading*/
+.title-heading h1 {
+    font-size: 5rem;
+    font-family: 'Oswald', sans-serif;
+    text-transform: lowercase;
+    background: #db963b;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    padding: 0rem;
+    user-select: none;
+}
+
+.title-heading h6 {
+    font-size: 2rem;
+    font-weight: 300;
+    max-width: 375px;
+}
+
+.quotation {
+    -webkit-perspective: 500px;
+    perspective: 500px;
+    -webkit-perspective-origin: center center;
+    perspective-origin: center center;
+    display: flex;
+    align-items: center;
+    margin: 1em;
+}
+
+.move-me {
+    margin: 100px;
+    position: relative;
+}
+
+.block {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: space-evenly;
+    -ms-flex-pack: space-evenly;
+    justify-content: space-evenly;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+.textQuote {
+    color: #db963b;
+    font-size: 12px;
+    font-weight: 300;
+    font-family: 'IBM Plex Mono', monospace;
+    text-align: center;
+}
+
+/*end of front page*/
+
+
+
+/*side-bar SOCIAL LINK*/
+/*LEFTBAR */
+
+/*vertical line sidebar (left)*/
+.social-media {
+    position: fixed;
+    width: 44px;
+    z-index: 9999;
+    top: 550px;
+    left: 0px;
+    background: transparent;
+    overflow-x: hidden;
+    padding: 0;
+    display: flex;
+    flex-direction: column;s
+}
+
+.social-media i {
+    font-size: 1.2rem;
+    transition: color 650ms;
+}
+
+.social-media i:hover {
+    color: #db963b;
+}
+
+.vl-left{
+    content: "";
+    display: block;
+    width: 1px;
+    height: 300px;
+    background-color: rgb(168, 178, 209);
+    margin: 0px auto;
+    box-sizing: inherit;
+}
+
+.left-sticky {
+    align-items: center;
+    justify-content: center;
+    top: 20px;
+    float: left;
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    width: 100%;
+    height: 100%;
+}
+
+.left-sticky a {
+    display: flex;
+    flex-direction: column;
+    margin: 8px;
+    padding: 2px;
+}
+
+/*right STICKY - EMAIL*/
+.vl-right {
+    content: "";
+    display: block;
+    width: 1px;
+    height: 300px;
+    background-color: rgb(168, 178, 209);
+    margin: 0px auto;
+    box-sizing: inherit;
+}
+
+.main-right {
+    width: 44px;
+    position: fixed;
+    z-index: 1;
+    top: 600px;
+    right: 0px;
+    background: transparent;
+    overflow-x: hidden;
+    padding: 0;
+    display: block;
+}
+
+.email {
+    writing-mode: vertical-rl;
+    padding-bottom: 10px;
+    width: 44px;
+    top: 0;
+    font-size: 0.85em;
+    font-family: 'IBM Plex Mono', monospaces;
+    display: flex;
+    align-items: center;
+}
+
+.email:hover {
+    color: #db963b;
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+/*ABOUT SECTION*/
+.paragraph-section {
+    font-family: 'IBM Plex Mono', monospace;
+    line-height: 20px;
+    text-align: justify;
+    text-justify: inter-word;
+}
+
+
+.about {
+    font-size: 13px;
+}
+
+.skillname {
+    display: flex;
+    flex-direction: row;
+    font-size: 12px;
+    font-family: 'IBM Plex Mono', monospace;
+    color:#db963b;
+}
+
+.emphasis_intro{
+    color:  #db963b;
+}
+
+.about .container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.about-heading {
+    text-align: center;
+    text-transform: uppercase;
+    line-height: 0;
+    margin-bottom: 6rem;
+}
+
+.about-heading h1 {
+    font-size: 10rem;
+    opacity: 0.3;
+}
+
+.about-heading h6 {
+    font-size: 2rem;
+    font-weight: 300;
+}
+
+.profile-img {
+    flex: 1;
+    margin-right: 5rem;
+
+}
+
+.about-details {
+    flex: 1;
+}
+
+/*End about*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.in-para-link {
+    cursor: pointer;
+}
+
+.in-para-link:hover{
+    color: #dbb582;
+    transition: 0.5s;
+}
+
+/*end header/navbar setting*/
+/*main content*/
+
+
+
+
+
 /*Start global*/
 * {
     margin: 0;
@@ -508,10 +672,10 @@ img {
 
 /*Start reusable*/
 .container {
-    width: 90%;
-    max-width: 100rem;
+    width: 80%;
+    max-width: 287px;
     height: 100%;
-    margin: 100px auto;
+    /* margin: 100px auto; */
     position: relative;
 }
 
@@ -571,111 +735,6 @@ img {
     z-index: 50;
 }
 
-/*LEFTBAR */
-
-/*vertical line sidebar (left)*/
-.vl-left{
-    content: "";
-    display: block;
-    width: 1px;
-    height: 300px;
-    background-color: rgb(168, 178, 209);
-    margin: 0px auto;
-    box-sizing: inherit;
-}
-
-.main-left {
-    width: 150px;
-    position: fixed;
-    z-index: 1;
-    top: 550px;
-    left: 0px;
-    background: transparent;
-    overflow-x: hidden;
-    padding: 8px 0;
-    display: flex;
-    flex-direction: column;
-}
-
-.left-sticky {
-    align-items: center;
-    justify-content: center;
-    top: 20px;
-    height: 300px;
-    width: 200px;
-    float: left;
-    display: flex;
-    flex-direction: column;
-}
-
-.left-sticky a {
-    display: flex;
-    flex-direction: column;
-    margin: 10px;
-    padding: 5px;
-}
-
-.social-media i {
-    font-size: 2.5rem;
-    transition: color 650ms;
-}
-
-.social-media i:hover {
-    color: #db963b;
-}
-
-.nav-list {
-    list-style: none;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-li {
-    margin: 0 2rem;
-}
-
-/*RIGHT SIDE BAR*/
-.vl-right {
-    content: "";
-    display: block;
-    width: 1px;
-    height: 300px;
-    background-color: rgb(168, 178, 209);
-    margin: 0px auto;
-    box-sizing: inherit;
-}
-
-.main-right {
-    width: 150px;
-    position: fixed;
-    z-index: 1;
-    top: 600px;
-    right: 0px;
-    background: transparent;
-    overflow-x: hidden;
-    padding: 8px 0;
-    display: block;
-}
-
-
-.email {
-    writing-mode: vertical-rl;
-    top: 0;
-    font-size: 15px;
-    font-family: 'IBM Plex Mono', monospaces;
-    display: flex;
-    align-items: center;
-    margin: 15px 67px;
-}
-
-.email:hover {
-    color: #db963b;
-    transition: 0.5s;
-    cursor: pointer;
-}
 
 .nav-link {
     font-family: 'Oswald', monospace;
@@ -717,60 +776,7 @@ li {
     transform: rotate(-45deg);
 }
 
-.title-heading h1 {
-    font-size: 10rem;
-    font-family: 'Oswald', sans-serif;
-    text-transform: uppercase;
-    background: #db963b;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    padding: 1rem;
-    user-select: none;
-}
-
-.title-heading h6 {
-    font-size: 2rem;
-    font-weight: 300;
-}
-
 /*End header*/
-
-/*Start about*/
-.about .container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.about-heading {
-    text-align: center;
-    text-transform: uppercase;
-    line-height: 0;
-    margin-bottom: 6rem;
-}
-
-.about-heading h1 {
-    font-size: 10rem;
-    opacity: 0.3;
-}
-
-.about-heading h6 {
-    font-size: 2rem;
-    font-weight: 300;
-}
-
-.profile-img {
-    flex: 1;
-    margin-right: 5rem;
-
-}
-
-.about-details {
-    flex: 1;
-}
-
-
-/*End about*/
 
 /*Start publication*/
 .portfolio-item {
@@ -916,77 +922,6 @@ h3 {
 
 /*end workexperience*/
 
-
-/*photo section*/
-.slidershow{
-    width: 800px;
-    height: 500px;
-    overflow: hidden;
-    margin-top: 300px;
-  }
-  .middle{
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-  }
-  .navigation{
-    position: absolute;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-  }
-  .bar{
-    width: 50px;
-    height: 10px;
-    border: 2px solid #fff;
-    margin: 6px;
-    cursor: pointer;
-    transition: 0.3s;
-  }
-  .bar:hover{
-    background: #fff;
-  }
-  
-  input[name="r"]{
-      position: absolute;
-      visibility: hidden;
-  }
-  
-  .slides{
-    width: 500%;
-    height: 100%;
-    display: flex;
-  }
-  
-  .slide{
-    width: 20%;
-    transition: 0.6s;
-  }
-  .slide img{
-    width: 100%;
-    height: 100%;
-  }
-  
-  #r1:checked ~ .s1{
-    margin-left: 0;
-  }
-  #r2:checked ~ .s1{
-    margin-left: -20%;
-  }
-  #r3:checked ~ .s1{
-    margin-left: -40%;
-  }
-  #r4:checked ~ .s1{
-    margin-left: -60%;
-  }
-  #r5:checked ~ .s1{
-    margin-left: -80%;
-  }
-
-/*photo seciton ends*/
-
 /*portfolio starts*/
   .text-center {
     text-align: center;
@@ -1020,11 +955,7 @@ h3 {
     justify-content: space-evenly;
   }
   
-  @media screen and (min-width:1380px) {
-    .box-container {
-      flex-direction: row;
-    }
-  }
+
   
   .box-item {
     position: relative;
@@ -1151,24 +1082,18 @@ h3 {
 /*contact ends*/
 
 /*Start footer*/
-
 .copyright {
     width: 100%;
     text-align: center;
     background-color: rgba(0, 0, 0, 0.301);
     font-family: 'IBM Plex Mono', monospace;
-    padding: 1.5rem 0;
+    padding: 1rem 0;
     position: relative;
 }
 
 .copyright p {
-    font-size: 1.2rem;
+    font-size: 0.7rem;
     color: #db963b
-}
-
-.copyright p:hover {
-    color: #dbac6f;
-    cursor: pointer;
 }
 
 /*End footer*/
