updating media query

--- a/views/index.html
+++ b/views/index.html
@@ -114,50 +114,24 @@
 
     <!--main section-->
     <div>
-      <section class="about" id="about">
-        <div class="container">
-          <div class="profile-img" data-aos="fade-up" data-aos-delay="300">
-            <img class="profileimage" src="images/profile2.jpg" alt="profilepic" />
+      <section id="about">
+        <div class="container aboutSection">
+          <div data-aos="fade-up" data-aos-delay="300">
+            <img class="profile-img" src="images/profile2.jpg" alt="profilepic" />
           </div>
-          <div class="about-details" data-aos="fade-down" data-aos-delay="600">
+          <div data-aos="fade-down" data-aos-delay="600">
             <br />
             <p class="paragraph-section about">
-              I like creating products that are truly unique and reflect their value and aesthetics. I develop websites/applications that provide both intuitive UI and efficient and adaptable backends.
+              I like creating products that are truly unique and reflect their value and aesthetics. I make websites/applications that provide both intuitive UI and efficient and adaptable backends.
               <br />
               <br />
               I have a bachelor's degree in <a class="emphasis_intro">Biochemistry and Cell Biology</a> at University of California, San Diego. I finished my master's in <a class=emphasis_intro>Biomedical Engineering</a> at University of California, Irvine and specialized in <a class=emphasis_intro>Carbon MEMS/NEMS and nanofibers for biosensors and electrochemical devices</a>.
               <br />
               <br />
-              Shortly after finishing my graduate program, I dabbled in programming
+              I get excited about learning new things. Shortly after finishing my graduate program, I dabbled in programming
               as a hobby to build a fun game. Then, the hobby led me into the field of <a class=emphasis_intro>web development</a> where I found myself enjoying building fun tools for the web.
-              <br/>
-              <br/>
-              Here's some technologies I've been working with recently:
             </p>
             <br/>
-
-            <ul class="skillname">
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>Javascript</li>
-              <li>React/Redux</li>
-              <li>MongoDB/Mongoose</li>
-              <li>NodeJS</li>
-            </ul>
-            <ul class="skillname">
-              <li>Lightroom</li>
-              <li>Photoshop</li>
-              <li>Heroku</li>
-              <li>Premiere Rush</li>
-              <li>MERN</li>
-            </ul>
-            <ul class="skillname">
-              <li>Boostrap</li>
-              <li>Material UI</li>
-              <li>Appbase.io</li>
-              <li>GitHub Page, Git</li>
-              <li>Firebase</li>
-            </ul>
           </div>
         </div>
       </section>
