--- a/public/main-mb.css
+++ b/public/main-mb.css
@@ -538,63 +538,29 @@ object:hover {
 }
 
 /*ABOUT SECTION*/
+.aboutSection {
+    display: flex;
+    flex-direction: column;
+}
+
 .paragraph-section {
     font-family: 'IBM Plex Mono', monospace;
-    line-height: 20px;
+    line-height: 18px;
     text-align: justify;
     text-justify: inter-word;
-}
-
-
-.about {
-    font-size: 13px;
-}
-
-.skillname {
-    display: flex;
-    flex-direction: row;
-    font-size: 12px;
-    font-family: 'IBM Plex Mono', monospace;
-    color:#db963b;
+    font-size: 11px;
 }
 
 .emphasis_intro{
     color:  #db963b;
 }
 
-.about .container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.about-heading {
-    text-align: center;
-    text-transform: uppercase;
-    line-height: 0;
-    margin-bottom: 6rem;
-}
-
-.about-heading h1 {
-    font-size: 10rem;
-    opacity: 0.3;
-}
-
-.about-heading h6 {
-    font-size: 2rem;
-    font-weight: 300;
-}
 
 .profile-img {
     flex: 1;
     margin-right: 5rem;
 
 }
-
-.about-details {
-    flex: 1;
-}
-
 /*End about*/
 
 
@@ -673,9 +639,9 @@ img {
 /*Start reusable*/
 .container {
     width: 80%;
-    max-width: 287px;
+    max-width: 100rem;
     height: 100%;
-    /* margin: 100px auto; */
+    margin: 100px auto;
     position: relative;
 }
 
