media query completed

--- a/views/index.html
+++ b/views/index.html
@@ -121,7 +121,7 @@
           </div>
           <div data-aos="fade-down" data-aos-delay="600">
             <br />
-            <p class="paragraph-section about">
+            <p class="paragraph-section">
               I like creating products that are truly unique and reflect their value and aesthetics. I make websites/applications that provide both intuitive UI and efficient and adaptable backends.
               <br />
               <br />
@@ -131,42 +131,40 @@
               I get excited about learning new things. Shortly after finishing my graduate program, I dabbled in programming
               as a hobby to build a fun game. Then, the hobby led me into the field of <a class=emphasis_intro>web development</a> where I found myself enjoying building fun tools for the web.
             </p>
-            <br/>
           </div>
         </div>
       </section>
       <section class="experience" id="experience">
-        <div class="container">
+        <div class="container" id="UpdatedContainer">
           <div class="section-heading">
             <h1>Work Experience</h1>
             <h6>See where I worked </h6>
           </div>
-          <div class="work-exp-content">
-            <div class="container" data-aos="fade-down" data-aos-delay="300">
+            <div data-aos="fade-down" data-aos-delay="300">
               <div class="tab">
                 <button class="tablinks" onclick="openCity(event, 'cj')" id="defaultOpen">
                   Front-End
                 </button>
                 <button class="tablinks" onclick="openCity(event, 'biomems')">
-                  BioMEMS/Carbon-MEMS
+                  BioMEMS
                 </button>
                 <button class="tablinks" onclick="openCity(event, 'thermo')">
-                  Thermoplastic Shrink Lab
+                  Thermo-plastic
                 </button>
                 <button class="tablinks" onclick="openCity(event, 'rdl')">
-                  Rheumatology Diagnostics
+                  RDL
                 </button>
                 <button class="tablinks" onclick="openCity(event, 'hycor')">
-                  Hycor Biomedical
+                  Hycor
                 </button>
                 <button class="tablinks" onclick="openCity(event, 'VA Hospital')">
-                  VA San Diego Healthcare
+                  VASDH
                 </button>
               </div>
-              <div>
+              <div class="mainTabContent">
                 <div id="cj" class="tabcontent">
                   <h1>Personal Projects</h1>
-                  <h2>Front-End Software Engineer</h2>
+                  <h2>Front-End Developer</h2>
                   <h3>Oct 2018 - Present</h3>
                   <br>
                   <ul>
@@ -233,10 +231,9 @@
                   </ul>
                 </div>
               </div>
+              </div>
             </div>
-          </div>
         </div>
-        
       </section>
       <section class="portfolio" id="portfolio">
         <div class="container">
@@ -271,7 +268,7 @@
                 </div>
                 <div class="flip-box-back text-center" style="background-color:black;">
                   <div class="inner color-white">
-                    <div class="listoftools">[ Javascript, HTML, CSS, MERN ]</div>
+                    <div class="listoftools">[ Javascript, HTML, CSS, React, Git, Material-UI]</div>
                     <button class="flip-box-button">Learn More</button>
                   </div>
                 </div>
@@ -316,7 +313,7 @@
               <div class="flip-box">
                 <div class="flip-box-front text-center" style="background-color:black;">
                   <div class="inner color-white">
-                    <h3 class="flip-box-header">Portfolio</h3>
+                    <h3 class="flip-box-header">Elsiemade</h3>
                     <p>Minialistic website for displaying portfolio.</p>
                   </div>
                 </div>
@@ -324,7 +321,7 @@
                   <div class="inner color-white">
                     <p class="back-para">
                     </p><br>
-                    <div class="listoftools">[ Javascript, HTML, CSS, React, NodeJS, Heroku ]</div>
+                    <div class="listoftools">[ Javascript, HTML, CSS, React, NodeJS, AOS.js, Heroku ]</div>
                     <button class="flip-box-button"><a href="https://www.elsiemade.com">Learn More</a></button>
                   </div>
                 </div>
