--- a/public/main-mb.css
+++ b/public/main-mb.css
@@ -555,7 +555,6 @@ object:hover {
     color:  #db963b;
 }
 
-
 .profile-img {
     flex: 1;
     margin-right: 5rem;
@@ -563,273 +562,38 @@ object:hover {
 }
 /*End about*/
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-.in-para-link {
-    cursor: pointer;
-}
-
-.in-para-link:hover{
-    color: #dbb582;
-    transition: 0.5s;
-}
-
-/*end header/navbar setting*/
-/*main content*/
-
-
-
-
-
-/*Start global*/
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-
-}
-
-html {
-    font-size: 16px;
-    font-family: 'Oswald', monospace;
-    color: #eee;
-}
-
-body {
-    width: 100%;
-    height: 100%;
-    background: rgb(14, 15, 15) no-repeat center fixed;
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-}
-
-section {
-    padding: 6rem 0;
-}
-
-a {
-    text-decoration: none;
-    color: #eee;
-
-}
-
-p {
-    font-size: 1.8rem;
-    font-weight: 300;
-}
-
-img {
-    width: 100%;
-}
-
-/*End global*/
-
-/*Start reusable*/
-.container {
-    width: 80%;
-    max-width: 100rem;
-    height: 100%;
-    margin: 100px auto;
-    position: relative;
-}
-
-.section-heading {
-    text-align: center;
-    margin-bottom: 10rem;
-}
-
-.section-heading h1 {
-    font-size: 3.5rem;
-    color: #db963b;
-    text-transform: uppercase;
-    font-weight: 300;
-    position: relative;
-    margin-bottom: 1rem;
-}
-
-.section-heading h1::before,
-.section-heading h1::after {
-    content: '';
-    position: absolute;
-    bottom: -0.5rem;
-    left: 50%;
-    transform: translateX(-50%);
-    background-color: rgba(255, 255, 255, 0.75);
-}
-
-.section-heading h1::before {
-    width: 10rem;
-    height: 3px;
-    border-radius: 0.8rem;
-}
-
-.section-heading h6 {
-    font-size: 1.2rem;
-    font-weight: 300;
-    font-family: 'Courier New', Courier, monospace;
-}
-
-.has-margin-right {
-    margin-right: 5rem;
-}
-
-/*End reusable*/
-
-/*Start header*/
-
-.top-nav {
-    width: 100%;
-    height: 100vh;
-    position: fixed;
-    top: -100vh;
-    background-color: #333333;
-    border-bottom-right-radius: 100%;
-    border-bottom-left-radius: 100%;
-    transition: all 650ms;
-    z-index: 50;
-}
-
-
-.nav-link {
-    font-family: 'Oswald', monospace;
-    font-size: 5rem;
-    padding: 1rem;
-}
-
-.nav-link:hover,
-.nav-link:focus {
-    background: #db963b;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-.nav-link:hover {
-    transition: 1s;
-}
-
-.top-nav.open {
-    top: 0;
-    border-radius: initial;
-}
-
-.menu-toggler {
-    position: absolute;
-    top: 5rem;
-    right: 5rem;
-    width: 5rem;
-    height: 4rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    cursor: pointer;
-    z-index: 1500;
-    transition: transform 650ms ease-out;
-}
-
-.menu-toggler.open {
-    transform: rotate(-45deg);
-}
-
-/*End header*/
-
-/*Start publication*/
-.portfolio-item {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 5rem;
-}
-
-.portfolio-item:last-child {
-    margin-bottom: 0;
-}
-
-.portfolio-img {
-    flex: 1;
-    width: 50rem;
-
-}
-
-.portfolio-description {
-    flex: 1;
-}
-
-.portfolio-description h1 {
-    font-size: 3rem;
-    font-weight: 300;
-    margin: 1rem 0;
-}
-
-.portfolio-description h6 {
-    font-size: 1.5rem;
-    text-transform: uppercase;
-    font-weight: 300;
-    opacity: 0.3;
-}
-
-.portfolio-description .cta {
-    display: inline-block;
-    margin-top: 2.5rem;
-    font-size: 1.5rem;
-    text-transform: uppercase;
-    color: #3883ff;
-    transition: color 650ms;
-}
-
-.portfolio-description .cta:hover {
-    color: #2f67cd;
-}
-
-/*End publication*/
-
-/*work experience starts*/
+/*EXPERIENCE*/
 /* Style the tab */
 .experience {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-evenly;
-}
-
-.work-exp-content {
-    /* padding: 20px; */
-    margin: 0px;
-    border: 10px transparent;
+    margin: 0;
+    padding: 0;
 }
 
 .tab {
-    float: left;
-    border-left: 5px solid#b17930;
+    float: right;
     background-color: #2A2B2D;
-    width: 30%;
+    width: 300px;
     display: flex;
-    flex-direction: column;
-    height: 35rem;
+    flex-direction: row;
 }
 
 /* Style the buttons inside the tab */
+
 .tab button {
     display: flex;
     background-color: inherit;
     color: white;
     font-family: 'IBM Plex Mono', monospace;
-    font-size: 14px;
-    padding: 15px 15px;
+    font-size: 10px;
+    padding: 10px 4px;
     width: 100%;
+    writing-mode: vertical-rl; /*!notworking*/
     border: none;
     outline: none;
-    text-align: left;
+    text-align: center;
     cursor: pointer;
     transition: 0.3s;
     height: 100px;
@@ -838,23 +602,23 @@ img {
 /* Change background color of buttons on hover */
 .tab button:hover {
     background-color: rgb(37, 37, 37);
-    border-left: 20px solid#b17930;
+    border-top: 10px solid#b17930;
     color: #b17930;
-    font-size: 14px;
+    font-size: 10px;
     font-family: 'IBM Plex Mono', monospace;
 }
 
 /* Create an active/current "tab button" class */
-
 /* Style the tab content */
+
 .tabcontent {
     float: left;
-    padding: 20px 20px;
+    padding: 10px 20px;
     border: none;
     background-color: rgb(0, 0, 0);
-    width: 70%;
+    width: 300px;
     border-left: none;
-    height: 35rem;
+    height: 20rem;
 }
 
 .tablinks .active {
@@ -875,19 +639,19 @@ h3 {
 }
 
 .tabcontent h1 {
-    font-size: 1.8em;
+    font-size: 0.8em;
 }
 
-.tabcontent h3 {
-    font-size: 1.3em;
+.tabcontent h2, h3 {
+    font-size: 0.7em;
 }
 
 .tabcontent ul {
-    font-size: 13px;
+    font-size: 10px;
 }
-
 /*end workexperience*/
 
+/*PROTFOLIO*/
 /*portfolio starts*/
   .text-center {
     text-align: center;
@@ -900,33 +664,29 @@ h3 {
   .listoftools {
       color: #b17930;
       font-family: 'IBM Plex Mono', monospace;
-      font-size: 12px;
+      font-size: 10px;
   }
 
   .back-para {
-      font-size: 12px;
+      font-size: 10px;
       font-family: 'IBM Plex Mono', monospace;
   }
   
   .box-container {
     align-items: center;
     display: grid;
-    grid-template-columns: repeat(3, 0fr);
+    grid-template-columns: repeat(1, 0fr);
     grid-auto-rows: minmax(100px, auto);
-  /* display: flex;
-    flex-direction: row; */
     justify-content: space-around;
-    /* padding: 1px 15px; */
     width: 100%;
     justify-content: space-evenly;
   }
   
-
-  
   .box-item {
     position: relative;
     -webkit-backface-visibility: hidden;
-    width: 330px;
+    width: 300px;
+    height: 170px;
     padding: 10px;
     max-width: 100%;
   }
@@ -944,7 +704,7 @@ h3 {
     background-size: cover;
     background-position: center;
     border-radius: 8px;
-    min-height: 250px;
+    min-height: 150px;
     -ms-transition: transform 0.7s cubic-bezier(.4,.2,.2,1);
     transition: transform 0.7s cubic-bezier(.4,.2,.2,1);
     -webkit-transition: transform 0.7s cubic-bezier(.4,.2,.2,1);
@@ -1010,11 +770,11 @@ h3 {
   }
   
   .flip-box-header {
-    font-size: 15px;
+    font-size: 12px;
   }
   
   .flip-box p {
-    font-size: 1.3em;
+    font-size: 0.7em;
     line-height: 1em;
     margin-top: 15px;
     font-family: 'IBM Plex Mono', monospace;
@@ -1026,18 +786,157 @@ h3 {
   
   .flip-box-button {
     background-color: transparent;
-    border: 2px solid #fff;
-    border-radius: 15px;
+    border:none;
     color: #fff;
     cursor: pointer;
-    font-size: 15px;
+    font-size: 0.8em;
     font-weight: bold;
     margin-top: 20px;
     padding: 15px 20px;
     font-family: 'IBM Plex Mono', monospace;
   }
 
+  .flip-box-button:hover {
+    border-radius: 15px;
+    color: black;
+    cursor: pointer;
+    font-size: 0.8em;
+    font-weight: bold;
+    margin-top: 20px;
+    padding: 15px 20px;
+    transition: 0.3s;
+    font-family: 'IBM Plex Mono', monospace;
+  }
+
+
 /*portfolio ends*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+.in-para-link {
+    cursor: pointer;
+}
+
+.in-para-link:hover{
+    color: #dbb582;
+    transition: 0.5s;
+}
+
+/*end header/navbar setting*/
+/*main content*/
+
+
+
+
+
+/*Start global*/
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+}
+
+html {
+    font-size: 16px;
+    font-family: 'Oswald', monospace;
+    color: #eee;
+}
+
+body {
+    width: 100%;
+    height: 100%;
+    background: rgb(14, 15, 15) no-repeat center fixed;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+}
+
+section {
+    padding: 6rem 0;
+}
+
+a {
+    text-decoration: none;
+    color: #eee;
+
+}
+
+img {
+    width: 100%;
+}
+
+/*End global*/
+
+/*Start REUSABLE*/
+.container {
+    width: 80%;
+    max-width: 100rem;
+    height: 100%;
+    margin: 50px auto;
+    position: relative;
+}
+
+.section-heading {
+    text-align: center;
+    margin-bottom: 10rem;
+}
+
+.section-heading h1 {
+    font-size: 3.5rem;
+    color: #db963b;
+    text-transform: uppercase;
+    font-weight: 300;
+    position: relative;
+    margin-bottom: 1rem;
+}
+
+.section-heading h1::before,
+.section-heading h1::after {
+    content: '';
+    position: absolute;
+    bottom: -0.5rem;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgba(255, 255, 255, 0.75);
+}
+
+.section-heading h1::before {
+    width: 5rem;
+    height: 3px;
+    border-radius: 0.8rem;
+}
+
+.section-heading h6 {
+    font-size: 0.8rem;
+    font-weight: 300;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.has-margin-right {
+    margin-right: 5rem;
+}
+/*End reusable*/
+
+
+
+
+
+
+
+
+
+
 
 
 /*contact*/
@@ -1046,6 +945,13 @@ h3 {
     text-align: center;
 }
 /*contact ends*/
+
+
+
+
+
+
+
 
 /*Start footer*/
 .copyright {
